--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
             <div id="loader">
                 Loading...
                 <div class="disclaimer">
-                This is a WebGL demo and very unlikely to work unless you run
-                a recent variant of Chrome or Firefox
+                This demo leverages GPU-accelerated WebGL and modern shader support for real-time ray tracing.
                 </div>
             </div>
 
